copypasted Gaby's code - WHEN MERGING: HTML- keep both codes, fix line 17 last name, CSS: deleted h2, tried to wrap long text, h2class name fixed

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -186,3 +186,44 @@
   display: flex;
   justify-content: space-between;
 }
+
+
+// ******************* Card product // Dashboard ************************
+
+
+.card-product {
+  overflow: hidden;
+  height: 310px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  border: 18px solid $sec-salmon;
+  border-radius: 30px;
+  margin-bottom: 20px;
+}
+
+.card-product img {
+  height: 100%;
+  width: 310px;
+  object-fit: cover;
+}
+
+// .card-product-infos h2 {
+//   font-size: 24px;
+//   font-weight: bold;
+//   margin: 0;
+// }
+
+.card-product p {
+  font-size: 18px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 16px;
+  //overflow-wrap: break-word;
+}
